--- a/src/partial/button/btn-action.hbs
+++ b/src/partial/button/btn-action.hbs
@@ -1,5 +1,5 @@
 <a href="{{href}}" class="btn-action"
-    kind="{{kind}}" onclick="{{onClick}}" spa-link>
+    kind="{{kind}}" onclick="{{onClick}}" id="{{id}}" spa-link>
     <i class="netflix" kind="{{kind}}"></i>
     {{label}}
 </a>
