--- a/src/pages/feed/components/feed-collection.hbs
+++ b/src/pages/feed/components/feed-collection.hbs
@@ -9,7 +9,7 @@
         <div class="feed-collection__container-card"
             title="{{this.name}}">
             <div>
-                <video height="428" playsinline preload
+                <video height="400" playsinline muted preload="none"
                     poster="{{this.previewPath}}">
                     <source src="{{this.previewVideoPath}}"
                         type='video/mp4'>
