--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -36,7 +36,7 @@
                 <div class="content-container__advanced-info__genres-list">
                     {{#each film.artists}}
                     <a class="content-container__advanced-info__genres-link"
-                        href="/artist/{{this.id}}" spa-link>{{this.name}}
+                        href="/cast/{{this.id}}" spa-link>{{this.name}}
                     </a>
                     {{/each}}
                 </div>
