--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -10,9 +10,9 @@
         <div
             class="partial-header--link-block ml-3 col d-flex align-items-center feed-header-menu margin-a">
             <a href="/" spa-link>Начало</a>
-            <a href="#serials">Сериалы</a>
-            <a href="#films">Фильмы</a>
-            <a href="#list">Избранное</a>
+            <a href="#serials" disable="true">Сериалы</a>
+            <a href="#films" disable="true">Фильмы</a>
+            <a href="#list" disable="true">Избранное</a>
         </div>
         {{/if}}
 
