--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -12,6 +12,10 @@
             src="{{film.film.previewVideoPath}}"
             type="video/mp4" />
     </video>
+    <div class="content-container__player__actions">
+        {{>btn-action id="prev-button" kind="prev"}}
+        {{>btn-action id="next-button" kind="next"}}
+    </div>
     <div class="content-container__advanced-info">
         <div class="content-container__advanced-info__meta">
             <div class="content-container__advanced-info__meta-year"><b>Год
