--- a/src/pages/content/components/player.css
+++ b/src/pages/content/components/player.css
@@ -79,3 +79,21 @@
     display: flex;
     flex-direction: column;
 }
+
+.content-container__player__actions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 15px;
+    gap: 10px;
+}
+
+.content-container__player__actions a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    padding: 4px;
+    cursor: pointer;
+}
