--- a/src/pages/login/components/login-form.hbs
+++ b/src/pages/login/components/login-form.hbs
@@ -12,7 +12,7 @@
 
             <div class="login-page__form-action">
                 <span>Недавно на Netflix? <a href="/start-register"
-                        class="login-page__form-action-link" spa-link>Зарегестрируйтесь</a></span>
+                        class="login-page__form-action-link" spa-link>Зарегистрируйтесь</a></span>
             </div>
         </form>
     </div>
