--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -9,7 +9,7 @@
         controlslist="nodownload noremoteplayback"
         class="content-container__player">
         <source
-            src="{{film.film.previewVideoPath}}"
+            src="{{film.film.mediaPath}}"
             type="video/mp4" />
     </video>
     <div class="content-container__player__actions">
