add film ref to cast page

--- a/src/pages/cast/components/video-item.hbs
+++ b/src/pages/cast/components/video-item.hbs
@@ -3,7 +3,7 @@
         <div>
             <img src="{{content.previewPath}}" alt="{{content.previewPath}}">
 
-            <a href="/feed/{{content.id}}"
+            <a href="/movies/{{content.id}}"
                style="margin-left: 1rem;"
                spa-link>
                 <div class="video-item__advanced-info">
