--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -1,12 +1,9 @@
 <div class="main">
-    {{> partial-header kind="main-page" mainPage=true}}
+   <!-- {{> partial-header kind="main-page" mainPage=true}}-->
 
-    {{> main-background}}
+    {{> components/main-background}}
 
-    {{> main-form}}
-
-    {{> main-banner}}
-
+    <!--{{> main-banner}}
     {{> main-content
     firstMode=true
     Title="Наслаждайтесь на своем телевизоре"
@@ -68,5 +65,5 @@
     </div>'
     }}
 
-    {{> partial-footer}}
+    {{> partial-footer}}-->
 </div>
