add link to top rated film

--- a/src/pages/feed/components/feed-preview.hbs
+++ b/src/pages/feed/components/feed-preview.hbs
@@ -11,8 +11,8 @@
                 {{description}}
             </p>
             <div class="feed-page__content-actions">
-                {{> btn-action label="Смотреть" kind="play"}}
-                {{> btn-action label="Подробнее" kind="info"}}
+                {{> btn-action label="Смотреть" kind="play" id=id }}
+<!--                {{> btn-action label="Подробнее" kind="info"}}-->
             </div>
         </div>
     </div>
