--- a/src/components/notify/notify.hbs
+++ b/src/components/notify/notify.hbs
@@ -1,6 +1,6 @@
 <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
-        <img src="src/static/img/netflix.svg" class="toast__img">
+        <img src="img/netflix.svg" class="toast__img">
         <strong class="me-auto">Netflix</strong>
         <small>{{timeAgo}}</small>
         <button style="border: 0; background: none;" onclick="document.getElementById('toasts').innerHTML = '';">
