--- a/src/pages/register/components/start-register-form.hbs
+++ b/src/pages/register/components/start-register-form.hbs
@@ -14,7 +14,7 @@
             просмотр Netflix.
         </div>
 
-        {{> btn-link href="/register" kind="primary-xl"
+        {{> partial/button/btn-link href="/register" kind="primary-xl"
         label="Далее"}}
     </div>
 </div>
