--- a/src/partial/footer/partial-footer.hbs
+++ b/src/partial/footer/partial-footer.hbs
@@ -4,7 +4,7 @@
             <div
                 class="footer__element footer__element-logo footer__element-border"
                 kind="{{kind}}">
-                {{> netflix-logo}}
+                {{> partial/netflix-logo/netflix-logo}}
             </div>
             <div class="footer__element footer__element-border" kind="{{kind}}">
                 <p class="footer__element-text" kind="{{kind}}">Команда Holi</p>
