--- a/src/pages/feed/feed-page.hbs
+++ b/src/pages/feed/feed-page.hbs
@@ -1,11 +1,11 @@
-{{> partial-header kind="feed-page" feedPage=true}}
+{{> partial/header/partial-header kind="feed-page" feedPage=true}}
 
-{{> feed-preview
-webm-url="static/wednesday.webm"
+{{> components/feed-preview
+webm-url="video/wednesday.webm"
 title="Wednesday"
 description="Уэнсдэй, дочь Гомеса и Мортиши Аддамс, учится в академии Nevermore. Ей предстоит освоить экстрасенсорные способности, чтобы остановить местного серийного убийцу и раскрыть тайну родителей."
 }}
 
 <div id="feed-collections"></div>
 
-{{> partial-footer}}
+{{> partial/footer/partial-footer}}
