--- a/src/pages/login/components/login-form.hbs
+++ b/src/pages/login/components/login-form.hbs
@@ -4,11 +4,11 @@
 
         <form name="loginForm" action="post">
 
-            {{> input-control default=true placeholder="Email" id="email"
+            {{> partial/input-control/input-control default=true placeholder="Email" id="email"
             name="email" type="email" kind="login-page"}}
-            {{> input-control default=true placeholder="Введите пароль" id="password"
+            {{> partial/input-control/input-control default=true placeholder="Введите пароль" id="password"
             name="password" type="password" kind="login-page"}}
-            {{> button type="submit" kind="login" label="Войти" id="submit"}}
+            {{> partial/button/button type="submit" kind="login" label="Войти" id="submit"}}
 
             <div class="login-page__form-action">
                 <span>Недавно на Netflix? <a href="/start-register"
