--- a/src/pages/profile/components/profile-form.hbs
+++ b/src/pages/profile/components/profile-form.hbs
@@ -2,7 +2,7 @@
     <div>
         <b><h3>Редактировать профиль</h1></b>
         <label for="name">Имя пользователя</label>
-        {{> input-control kind="register-page" id="username"
+        {{> partial/input-control/input-control kind="register-page" id="username"
         default=true
         autocomplete="nickname"
         placeholder="Имя пользователя"
@@ -10,7 +10,7 @@
     </div>
     <div>
         <label for="email">Почта</label>
-        {{> input-control kind="register-page" id="email"
+        {{> partial/input-control/input-control kind="register-page" id="email"
         default=true
         placeholder="Почта"
         autocomplete="email"
@@ -18,15 +18,15 @@
     </div>
     <div>
         <label for="password">Пароль</label>
-        {{> input-control kind="register-page"
+        {{> partial/input-control/input-control kind="register-page"
         id="password" default=true
         placeholder="Пароль"
         autocomplete="password"
         name="password" type="password"}}
     </div>
 
-    {{> input-control kind="register-page" file=true id="file"
+    {{> partial/input-control/input-control kind="register-page" file=true id="file"
     name="file" placeholder="Загрузите аватар" type="file"}}
 
-    {{> button type="submit" kind="login" label="Применить" id="submit"}}
+    {{> partial/button/button type="submit" kind="login" label="Применить" id="submit"}}
 </form>
