--- a/src/static/assets/style.css
+++ b/src/static/assets/style.css
@@ -2,11 +2,7 @@
 @import url(colors.css);
 @import url(scrollbar.css);
 
-@import url(/src/partial/button/button.css);
-@import url(/src/partial/avatar/avatar.css);
-@import url(/src/partial/header/partial-header.css);
-@import url(/src/partial/footer/partial-footer.css);
-@import url(/src/partial/input-control/input-control.css);
+@import url(../../partial/partial.css);
 @import url(../../pages/login/login.css);
 @import url(../../pages/feed/feed.css);
 @import url(../../components/notify/notify.css);
