--- a/src/pages/feed/feed-page.hbs
+++ b/src/pages/feed/feed-page.hbs
@@ -1,9 +1,10 @@
 {{> partial/header/partial-header kind="feed-page" feedPage=true}}
 
 {{> components/feed-preview
-webm-url="video/wednesday.webm"
-title="Wednesday"
-description="Уэнсдэй, дочь Гомеса и Мортиши Аддамс, учится в академии Nevermore. Ей предстоит освоить экстрасенсорные способности, чтобы остановить местного серийного убийцу и раскрыть тайну родителей."
+id=id
+webm-url=preview.previewVideoPath
+title=preview.name
+description=preview.description
 }}
 
 <div id="feed-collections"></div>
