--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -1,14 +1,14 @@
  <div class="header-content" kind="{{kind}}">
-    <div class="row" style="width: 100%;">
+    <div class="header-content__container">
         <!-- Колонка логотипа {Существует всегда} -->
-        <div class="col justify-content-start">
+        <div class="header-content__logo">
             {{> partial/netflix-logo/netflix-logo}}
         </div>
 
         <!-- Колонка ссылок {Только у подборок} -->
         {{#if feedPage}}
         <div
-            class="partial-header--link-block ml-3 col d-flex align-items-center feed-header-menu margin-a">
+            class="header-content__links feed-header-menu margin-a">
             <a href="/" spa-link>Начало</a>
             <a href="#serials" disable="true">Сериалы</a>
             <a href="#films" disable="true">Фильмы</a>
@@ -24,7 +24,7 @@
                                     -feed: DropdownList с аватаркой пользователя и меню действий
                                     } 
             -->
-        <div class="col d-flex justify-content-end">
+        <div class="header-content__user-info">
 
             {{#if mainPage}}
             {{> partial/button/btn-link href="/login" kind="primary"
@@ -37,11 +37,11 @@
             {{/if}}
 
             {{#if profilePage}}
-            <nav style="position: absolute;">
+            <nav style="position: absolute; top: 0">
                 <ul class="drop-down closed">
                     <li kind={{kind}}>
                         <a class="nav-button" id="dropdown">
-                            {{> partial/avatar/avatar avatarUrl="/img/avatarStatic.jpg"}}
+                            {{> partial/avatar/avatar avatarUrl="https://static_holi.hb.ru-msk.vkcs.cloud/Preview_Film/HOW_TO_BUILD_A_GIRL.jpg"}}
                         </a>
                     </li>
                     <li kind={{kind}}>
@@ -56,7 +56,7 @@
                     <li>
                         
                         <a  class="nav-button" id="dropdown">
-                            {{> partial/avatar/avatar avatarUrl="/img/avatarStatic.jpg"}}
+                            {{> partial/avatar/avatar avatarUrl="https://static_holi.hb.ru-msk.vkcs.cloud/Preview_Film/HOW_TO_BUILD_A_GIRL.jpg"}}
                         </a>
                     </li>
                     <li>
