--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -1,4 +1,5 @@
- <div class="row" style="width: 100%;">
+ <div class="header-content" kind="{{kind}}">
+    <div class="row" style="width: 100%;">
         <!-- Колонка логотипа {Существует всегда} -->
         <div class="col justify-content-start">
             {{> partial/netflix-logo/netflix-logo}}
@@ -14,6 +15,7 @@
             <a href="#list" disable="true">Избранное</a>
         </div>
         {{/if}}
+
         <!-- Колонка действие {
                                     Существует вариативно:
                                     -main: Ссылка входа
@@ -52,7 +54,7 @@
             <nav style="position: absolute;">
                 <ul class="drop-down closed">
                     <li>
-
+                        
                         <a  class="nav-button" id="dropdown">
                             {{> partial/avatar/avatar avatarUrl="https://static_holi.hb.ru-msk.vkcs.cloud/Preview_Film/HOW_TO_BUILD_A_GIRL.jpg"}}
                         </a>
@@ -66,6 +68,7 @@
                 </ul>
             </nav>
             {{/if}}
+
         </div>
     </div>
 </div>
