--- a/src/pages/main/components/main-background.hbs
+++ b/src/pages/main/components/main-background.hbs
@@ -1,4 +1,4 @@
-<div class="main__background">
+<div class="main__background" style="background-image: url('/img/main.jpg');">
     <div class="main__background-shadow">
 
         <div class="main-form">
