--- a/src/pages/login/components/login-background.hbs
+++ b/src/pages/login/components/login-background.hbs
@@ -1,1 +1,1 @@
-<div class="login-page__login-background"></div>
+<div class="login-page__login-background" style="background-image: url('/img/main.jpg');"></div>
