--- a/src/pages/profile/profile-page.hbs
+++ b/src/pages/profile/profile-page.hbs
@@ -1,4 +1,4 @@
-{{> partial/header/partial-header profilePage=true kind="profile-page"}}
+{{> partial/header/partial-header profilePage=true kind="feed-page"}}
 
 {{> components/profile-form }}
 
