--- a/src/partial/input-control/input-control.hbs
+++ b/src/partial/input-control/input-control.hbs
@@ -9,7 +9,7 @@
     <input class="input-control" kind="profile-page"
         name="{{name}}" type="file"
         id="{{id}}">
-    <span kind="secondary" class="partial-btn partial-btn-primary t-white">
+    <span kind="info" class="partial-btn partial-btn-primary btn-action t-white">
         <i class="netflix" kind="upload"></i>
     </span>
     <span class="input-control__file-text">{{placeholder}}</span>
